test/variables/sungeun/refvar-no-init-with-use.good
refvar-no-init-with-use.chpl:1: error: reference 'r' is not initialized
refvar-no-init-with-use.chpl:2: note: 'r' use here prevents split-init
